fix: change line-height from 1.4rem to 1.6 to fix overlapping in home page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,5 +22,5 @@ a {
   box-sizing: border-box;
   padding: 0;
   max-width: 100vw;
-  line-height: 1.4rem;
+  line-height: 1.6;
 }
